--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <header class="header">
         <h1>Annika Crossley</h1>
+    </header>
+    
+    <nav class="topnav">
         <h2>
             <a href="#about-me">About Me</a>
         </h2>
@@ -19,7 +22,7 @@
         <h2>
             <a href="#contact-me">Contact Me</a>
         </h2>
-    </header>
+    </nav>
 
     <main class="content">
         <section id="about-me">
