--- a/index.html
+++ b/index.html
@@ -33,10 +33,26 @@
 
         <section id="my-work">
             <h2>My Work</h2>
-            <img src="assets/arches-np.jpg" alt="Arches National Park">
-            <img src="assets/cape-cod.jpg" alt="boat floating in the bay, at Cape Cod">
-            <img src="assets/lake-louise.jpg" alt="Lake Louise">
-            <img src="assets/purple-flower.jpg" alt="purple flower in a garden">
+
+            <wrapper class="big-pic">
+                <a href="arches-np.jpg">
+                    <img src="assets/arches-np.jpg" alt="Arches National Park">
+              </a>
+            </wrapper>
+
+            <wrapper class="small-pic">
+                <a href="cape-cod.jpg">  
+                    <img src="assets/cape-cod.jpg" alt="boat floating in the bay, at Cape Cod">
+                </a>
+
+                <a href="lake-louise.jpg">
+                    <img src="assets/lake-louise.jpg" alt="Lake Louise">
+                </a>
+                
+                <a href="purple-flower.jpg">
+                    <img src="assets/purple-flower.jpg" alt="purple flower in a garden">
+                </a>
+             </wrapper>
         </section>
 
         <section id="contact-me">
