added styling to big pic

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Web Dev Portfolio</title>
 </head>
 
+
+
 <body>
     <header class="header">
         <h1>Annika Crossley</h1>
@@ -38,6 +40,7 @@
                 <a href="arches-np.jpg">
                     <img src="assets/arches-np.jpg" alt="Arches National Park">
               </a>
+              <button class="big-pic-button">Arches National Park</button>
             </wrapper>
 
             <wrapper class="small-pic">
