--- a/index.html
+++ b/index.html
@@ -39,21 +39,24 @@
             <wrapper class="big-pic">
                 <a href="arches-np.jpg">
                     <img src="assets/arches-np.jpg" alt="Arches National Park">
+                    <button class="big-pic-button">Arches National Park</button>
               </a>
-              <button class="big-pic-button">Arches National Park</button>
             </wrapper>
 
             <wrapper class="small-pic">
                 <a href="cape-cod.jpg">  
-                    <img src="assets/cape-cod.jpg" alt="boat floating in the bay, at Cape Cod">
+                    <img class="cape-cod" src="assets/cape-cod.jpg" alt="boat floating in the bay, at Cape Cod">
+                    <button class="sm-button-1">Cape Cod</button>
                 </a>
 
                 <a href="lake-louise.jpg">
                     <img src="assets/lake-louise.jpg" alt="Lake Louise">
+                    <button class="sm-button-2">Lake Louise</button>
                 </a>
                 
                 <a href="purple-flower.jpg">
                     <img src="assets/purple-flower.jpg" alt="purple flower in a garden">
+                    <button class="sm-button-3">Garden Party</button>
                 </a>
              </wrapper>
         </section>
