last commit before submitting assignment

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <section id="about-me">
             <h2>About Me</h2>
             <img src="assets/me-and-winnie.jpg" alt="me and my mom's dog winnie">
-            <p>Hi there! I am currently a student in the UW Coding Bootcamp. My professional background is as a registered dietitian, with five years working in public health. I am learning web development skills in order to make a career change that will better fit my & my family's life. Some of my hobbies including reading, traveling, walking my dogs, and going to concerts! Currently I work full time as a public health dietitian and study web development on the evenings and weekends. I hope you enjoy looking at the projects I have completed so far!</p>
+            <p>Hi there, I'm Annika! I am currently a student in the UW Coding Bootcamp. My professional background is as a registered dietitian, with five years working in public health. I am learning web development skills in order to make a career change that will better fit my & my family's life. Some of my hobbies including reading, traveling, walking my dogs, and going to concerts! I hope you come back to see some of the web applications I develop in the coming months. For now, please enjoy some of my photos from my travels. </p>
         </section>
 
         <section id="my-work">
             <h2>My Work</h2>
 
             <wrapper class="big-pic">
-                <a href="arches-np.jpg">
+                <a href="assets/arches-np.jpg" target="_blank">
                     <img src="assets/arches-np.jpg" alt="Arches National Park">
                     <button class="big-pic-button">Arches National Park</button>
               </a>
@@ -45,22 +45,21 @@
 
             <wrapper class="small-pic">
                 <figure class="cape-cod">
-                    <a href="cape-cod.jpg">  
+                    <a href="assets/cape-cod.jpg" target="_blank">  
                         <img src="assets/cape-cod.jpg" alt="boat floating in the bay, at Cape Cod">
                         <button>Cape Cod</button>
                     </a>
                 </figure>
 
                 <figure class="lake-louise"> 
-                    <a href="lake-louise.jpg">
+                    <a href="assets/lake-louise.jpg" target="_blank">
                         <img src="assets/lake-louise.jpg" alt="Lake Louise">
                         <button>Lake Louise</button>
                     </a>
                 </figure>  
 
                 <figure class="purple-flower">
-                    
-                    <a href="purple-flower.jpg">
+                    <a href="assets/purple-flower.jpg" target="_blank">
                         <img src="assets/purple-flower.jpg" alt="purple flower in a garden">
                         <button>Garden Party</button>
                     </a>
