--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Web Dev Portfolio</title>
 </head>
 
-
-
 <body>
     <header class="header">
         <h1>Annika Crossley</h1>
@@ -27,22 +25,23 @@
     </nav>
 
     <main class="content">
+<!--About Me-->    
         <section id="about-me">
             <h2>About Me</h2>
             <img src="assets/me-and-winnie.jpg" alt="me and my mom's dog winnie">
             <p>Hi there, I'm Annika! I am currently a student in the UW Coding Bootcamp. My professional background is as a registered dietitian, with five years working in public health. I am learning web development skills in order to make a career change that will better fit my & my family's life. Some of my hobbies including reading, traveling, walking my dogs, and going to concerts! I hope you come back to see some of the web applications I develop in the coming months. For now, please enjoy some of my photos from my travels. </p>
         </section>
 
+<!--My Work-->
         <section id="my-work">
             <h2>My Work</h2>
-
+     <!--Links to photos will be replaced with links to web apps as I develop them throughout the course-->
             <wrapper class="big-pic">
                 <a href="assets/arches-np.jpg" target="_blank">
                     <img src="assets/arches-np.jpg" alt="Arches National Park">
                     <button class="big-pic-button">Arches National Park</button>
               </a>
             </wrapper>
-
             <wrapper class="small-pic">
                 <figure class="cape-cod">
                     <a href="assets/cape-cod.jpg" target="_blank">  
@@ -64,10 +63,10 @@
                         <button>Garden Party</button>
                     </a>
                 </figure>
-
              </wrapper>
         </section>
 
+<!--Contact Me-->
         <section id="contact-me">
             <h2>Contact Me</h2>
             <ul>
@@ -82,7 +81,6 @@
                 </li>
             </ul>
         </section>
-
     </main>
 </body>
 </html>
