--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <h2>My Work</h2>
      <!--Links to photos will be replaced with links to web apps as I develop them throughout the course-->
             <wrapper class="big-pic">
-                <a href="assets/arches-np.jpg" target="_blank">
-                    <img src="assets/arches-np.jpg" alt="Arches National Park">
-                    <button class="big-pic-button">Arches National Park</button>
+                <a href="https://lshankkirchner017.github.io/culinary-climate-uofw/" target="_blank">
+                    <img src="assets/culinary-climate-pic.png" alt="Culinary Climate">
+                    <button class="big-pic-button">Culinary Climate</button>
               </a>
             </wrapper>
             <wrapper class="small-pic">
