updated cape cod to aquapocalypse - link and pic

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             </wrapper>
             <wrapper class="small-pic">
                 <figure class="cape-cod">
-                    <a href="assets/cape-cod.jpg" target="_blank">  
-                        <img src="assets/cape-cod.jpg" alt="boat floating in the bay, at Cape Cod">
-                        <button>Cape Cod</button>
+                    <a href="https://github.com/npokrandt/aquapocalypse" target="_blank">  
+                        <img src="assets/aquapocalypsepic.png" alt="Aquapocalypse">
+                        <button>Aquapocalypse</button>
                     </a>
                 </figure>
 
